// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceStatusSection MarketplaceStatusSection should match a snapshot 1`] = `
<div>
  <Component
    key="test"
  >
    <Component
      id="test"
      labelText=""
      name="scopes"
      value="test"
    />
  </Component>
  <div
    className="has-text-danger has-text-right undefined"
    data-test="input-error"
  >
    test
  </div>
</div>
`;

exports[`MarketplaceStatusSection should match a snapshot 1`] = `
<Component>
  <Component>
    Permissions
  </Component>
  <Component>
    To access a client's data, you will need to specify the entities you need access to on a read or write basis. You should be familiar with these entities from the sandbox. When the user installs your application, they will have to consent to your usage based on these permissions. If you do not have the correct permissions on an entity basis, your app will receive a 403 error.
  </Component>
  <Component>
    <Component
      key="test"
    >
      <Component
        id="test"
        labelText=""
        name="scopes"
        value="test"
      />
    </Component>
    <div
      className="has-text-danger has-text-right undefined"
      data-test="input-error"
    >
      test
    </div>
  </Component>
</Component>
`;
